# TFM-Playground

./: .gitignore  README.md  eval_forecasting.py  pretrain_classification.py  pretrain_forecasting.py  pretrain_regression.py  prior_visualization.ipynb  pyproject.toml
annotated/: annotated nanoTabPFN.md
docs/design/: timeseries-priors.md
nanotabpfn/: __init__.py  ensembles.py  evaluation.py  interface.py  preprocessors.py  priors.py  train.py
scripts/training/: pretrain_classification.py  pretrain_classification_new.py  pretrain_regression.py
scripts/training/configs/: train_classification.yaml
tests/: test_timeseries_priors.py
tfmplayground/: __init__.py  callbacks.py  evaluation.py  interface.py  model.py  train.py  utils.py
tfmplayground/priors/: README.md  __init__.py  config.py  dataloader.py  dataset.py  main.py  tabicl.py  utils.py
tfmplayground/priors/experiments/: README.md  analyze_priors.py  base_analyzer.py  compare_models.py  compare_time_tradeoff.py  config.yaml  data_analysis.py  data_generation.py  experiment_evaluation.py  generate_data.py  new_evaluation.py  run.sh  run_analysis.py  run_comparison.sh  train_models.py  utils.py  visualization_utils.py
tfmplayground/priors/real_data/: README.md  build_dataset_cache.py  episode_generator.py  kaggle.csv  openml.csv  openml_small.csv  select_pools.py  suites_config.json
tfmplayground/priors/tests/: README.md  __init__.py  run_all_tests.py  test_config.py  test_dataloader.py  test_utils.py
tfmplayground/training/: base.py  callbacks.py  trainer.py  util.py
(+28 files in other folders)
