[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tfmplayground"
version = "0.0.1"
authors = [
    { name = "Alexander Pfefferle", email = "pfeffera@cs.uni-freiburg.de" },
]
description = "A Playground for Tabular Foundation Models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.1",
    "h5py>=3",
    "requests>=2",
    "scikit-learn>=1.5",
    "schedulefree>=1.4",
    "pfns==0.3.0",
    "openml==0.15.1",
    "numpy>=2.0.2",
    "tabicl @ git+https://github.com/soda-inria/tabicl@e88d1600701240fd353803bf1b73b5309b18d406",
    "ticl @ git+https://github.com/microsoft/ticl.git@main",
    "tabpfn-v1-prior @ git+https://github.com/automl/tabpfn-v1-prior.git",
    "numba>=0.61.2",
    "interpret>=0.4.4",
    "mlflow>=3.1.4",
    "gpytorch>=1.13",
]

[project.optional-dependencies]
wandb = ["wandb>=0.20"]
tensorboard = ["tensorboard>=2.19"]
[project.urls]
Homepage = "https://github.com/automl/TFM-Playground"
Issues = "https://github.com/automl/TFM-Playground/issues"

[tool.setuptools]
packages = { find = { include = ["tfmplayground"] } }
